# communitynotes

opennotes-bot/: .env.example  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
opennotes-bot/.github/workflows/: test.yml
opennotes-bot/prisma/: schema.prisma  seed.ts
opennotes-bot/src/: index.ts  integration.test.ts  unit.test.ts
opennotes-bot/src/__tests__/: setup.ts
opennotes-bot/src/analytics/: AnalyticsService.ts  NatsTimeSeriesCollector.ts  TimeSeriesCollector.ts  index.ts
opennotes-bot/src/api/: server.ts
opennotes-bot/src/bot/: client.ts
opennotes-bot/src/cache/: redis.ts
opennotes-bot/src/dashboard/: App.tsx  index.html  main.tsx
opennotes-bot/src/database/: client.ts  index.ts
opennotes-bot/src/events/: RequestAggregationEventService.ts
opennotes-bot/src/monitoring/: healthCheck.ts  metrics.ts
opennotes-bot/src/notifications/: DiscordNotificationSender.ts  NotificationIntegration.ts  NotificationScheduler.ts  NotificationService.ts  index.ts  templates.ts  test-notifications.ts
opennotes-bot/src/scoring/: backgroundJob.ts  config.ts  helpfulnessCalculator.ts  index.ts  matrixFactorization.ts  requestorScoringService.ts  scoringService.ts  types.ts
opennotes-bot/src/streaming/: NatsConnection.ts  StreamingService.ts  index.ts
opennotes-bot/src/verification/: RateLimitService.ts  VerificationMiddleware.ts  VerificationService.ts  index.ts
opennotes-discord/: .env.example  .env.test.example  README.md  docker-compose.yml  jest.config.js  jest.integration.config.js  package-lock.json  package.json  tailwind.config.js  test-discord-connection.js  tsconfig.json  vite.config.ts
opennotes-discord/.github/workflows/: .workflow-summary.txt  README.md  SETUP_GUIDE.md  (+1 more)
opennotes-discord/coverage/: coverage-final.json  index.html  lcov.info
opennotes-discord/docs/: INTEGRATION_TESTING.md
opennotes-discord/prisma/: schema.prisma
opennotes-discord/src/: index.ts  integration.test.ts  simple.test.ts  unit.test.ts
opennotes-server/: .dockerignore  .env.example  Dockerfile  Makefile  QUICKSTART.md  README.md  SETUP_SUMMARY.md  docker-compose.yml  pyproject.toml  pytest.ini
opennotes-server/alembic/: env.py
opennotes-server/docs/: SCORING_API.md
opennotes-server/scripts/: verify_setup.sh
opennotes-server/src/: config.py  main.py
opennotes-server/src/api/v1/: router.py
opennotes-server/src/api/v1/endpoints/: scoring.py
opennotes-server/src/core/: auth.py  dependencies.py  logging_config.py  security.py
opennotes-server/src/db/: session.py
opennotes-server/src/db/models/: __init__.py  audit_log.py  message.py  moderation_queue.py  note_rating.py  note_request.py  notification_queue.py  open_note.py  rate_limiting.py  request_aggregation.py  server.py  server_member.py  user.py
opennotes-server/src/services/: scoring_adapter.py  scoring_service.py
opennotes-server/tests/: conftest.py  test_main.py
opennotes-server/tests/api/v1/endpoints/: test_scoring.py
opennotes-server/tests/services/: test_scoring_adapter.py
(+249 files in other folders)
